# bachelorarbeit-wasm-als-ergaenzung-zu-js-fuer-webanwendungen

./: LICENSE.md  README.md
benchmarks/binaryheap/binaryheap-assemblyscript/: README.md  asconfig.json  binaryHeap.js  index.html  index.js  package-lock.json  package.json
benchmarks/binaryheap/binaryheap-cpp/: Makefile  README.md  binaryheap.js  index.html  index.js
benchmarks/binaryheap/binaryheap-js/: README.md  binaryHeap.js  index.html  index.js  package-lock.json  package.json
benchmarks/binaryheap/binaryheap-rust/: Cargo.toml  README.md  index.html  index.js
benchmarks/mandelbrot/mandelbrot-assemblyscript/: README.md  asconfig.json  index.html  index.js  mandelbrot.js  package-lock.json  package.json
benchmarks/mandelbrot/mandelbrot-cpp/: Makefile  README.md  benchmark.js  index.html  index.js  mandelbrot.js
benchmarks/mandelbrot/mandelbrot-js/: README.md  index.html  index.js  mandelbrot.js  package-lock.json  package.json
benchmarks/raytracer/raytracer-rust/: Cargo.toml  README.md  index.html  index.js
benchmarks/raytracer/raytracer-rust/pkg/: package.json  raytracer_rust.d.ts  raytracer_rust.js  raytracer_rust_bg.wasm  raytracer_rust_bg.wasm.d.ts
benchmarks/raytracer/raytracer-rust/src/: camera.rs  intersection.rs  lib.rs  material.rs  random.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  vector.rs
examples/example-assemblyscript/: README.md  asconfig.json  index.html  index.js  package-lock.json  package.json
examples/example-cpp/: Makefile  README.md  index.html  index.js
examples/example-rust/: Cargo.toml  README.md  index.html  index.js
(+87 files in other folders)
