[package]
name = "raytracer-rust"
version = "0.1.0"
authors = ["Lukas Ruegner <ruegnerlukas@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'console',
]

[profile.release]
lto = true
opt-level = 's'